--- a/perfumes.html
+++ b/perfumes.html
@@ -51,45 +51,79 @@ h1{margin-bottom:40px;margin-top:0}
 .modal-right h2{margin-bottom:15px}
 .modal-right p{margin-bottom:15px}
 .modal-right label{font-weight:bold;display:block;margin:10px 0 5px}
-.add-cart{background:var(--color-primary);color:#fff;padding:12px;border:none;cursor:pointer;width:100%;border-radius:5px;font-size:1rem}
+.modal-right input[type="number"]{padding:8px;width:80px;margin-bottom:15px}
+.add-cart{background:var(--Color-primary, var(--color-primary));color:#fff;padding:12px;border:none;cursor:pointer;width:100%;border-radius:5px;font-size:1rem}
 .add-cart:hover{background:#333}
 .close{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#fff;cursor:pointer;z-index:10}
 
-/* RADIO BUTTONS Y CANTIDAD */
+/* RADIO / BOTONES TIPO PASTILLA */
 .ml-options {
   display: flex;
-  gap: 15px;
+  gap: 12px;
   margin-bottom: 15px;
-}
-.ml-options label {
-  font-weight: normal;
-  cursor: pointer;
+  justify-content: flex-start;
+  flex-wrap:wrap;
 }
 
-.quantity-control {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 15px;
+/* ocultar visiblemente el radio pero mantener accesible */
+.ml-options input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
-.quantity-control button {
+
+/* etiqueta tipo pastilla */
+.ml-btn {
+  padding: 10px 28px;
+  border-radius: 999px;
+  border: 2px solid var(--color-primary);
+  background: #f5f5f5;
+  color: var(--color-text);
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.22s ease;
+  user-select: none;
+  display:inline-block;
+}
+
+/* estado hover */
+.ml-btn:hover {
+  transform: translateY(-2px);
+  background: var(--color-accent);
+}
+
+/* estado seleccionado: usa selector de radio checked + label */
+.ml-options input[type="radio"]:checked + label.ml-btn {
   background: var(--color-primary);
   color: #fff;
-  border: none;
-  width: 35px;
-  height: 35px;
-  font-size: 1.2rem;
-  border-radius: 50%;
-  cursor: pointer;
+  border-color: var(--color-primary);
+  box-shadow: 0 6px 18px rgba(0,0,0,0.12);
 }
-.quantity-control button:hover {
-  background: #333;
+
+/* Cantidad (input numérico con botones) */
+.quantity-control {
+  display:flex;
+  align-items:center;
+  gap:10px;
+  margin-bottom:15px;
 }
-.quantity-control input {
-  width: 60px;
-  text-align: center;
-  padding: 5px;
+.quantity-control button {
+  background:var(--color-primary);
+  color:#fff;
+  border:none;
+  width:38px;
+  height:38px;
+  font-size:1.2rem;
+  border-radius:50%;
+  cursor:pointer;
+}
+.quantity-control button:hover{background:#333}
+.quantity-control input[type="number"]{
+  width:70px;
+  text-align:center;
+  padding:6px;
+  font-size:1rem;
 }
 
 /* RESPONSIVE MODAL */
@@ -123,55 +157,69 @@ h1{margin-bottom:40px;margin-top:0}
 </main>
 
 <!-- MODAL -->
-<div class="modal" id="productModal">
+<div class="modal" id="productModal" aria-hidden="true" role="dialog" aria-labelledby="modalTitle">
   <div class="modal-content">
-    <span class="close" id="closeModal">&times;</span>
+    <span class="close" id="closeModal" title="Cerrar">&times;</span>
     <div class="modal-left">
       <img id="modalImage" src="" alt="Producto">
     </div>
     <div class="modal-right">
       <h2 id="modalTitle"></h2>
       <p id="modalDescription"></p>
-      <p id="modalPrice" class="price"></p>
+      <p id="modalPrice" class="price" aria-live="polite"></p>
 
-      <!-- Presentación -->
-      <label>Presentación:</label>
-      <div class="ml-options">
-        <label><input type="radio" name="ml" value="60" id="ml60"> 60 ml</label>
-        <label><input type="radio" name="ml" value="120" id="ml120" checked> 120 ml</label>
+      <!-- Presentación (radios ocultos + labels estilo pastilla) -->
+      <label for="">Presentación:</label>
+      <div class="ml-options" id="mlOptions">
+        <input type="radio" name="ml" value="60" id="ml60">
+        <label for="ml60" class="ml-btn">60 ml</label>
+
+        <input type="radio" name="ml" value="120" id="ml120" checked>
+        <label for="ml120" class="ml-btn">120 ml</label>
       </div>
 
-      <!-- Cantidad -->
+      <!-- Cantidad: botones - y + con input numérico -->
       <label for="quantity">Cantidad:</label>
       <div class="quantity-control">
-        <button type="button" id="decreaseQty">-</button>
-        <input type="number" id="quantity" min="1" value="1">
-        <button type="button" id="increaseQty">+</button>
+        <button type="button" id="decreaseQty" aria-label="Disminuir cantidad">-</button>
+        <input type="number" id="quantity" min="1" value="1" aria-label="Cantidad de productos">
+        <button type="button" id="increaseQty" aria-label="Aumentar cantidad">+</button>
       </div>
 
-      <button class="add-cart">Agregar al carrito 🛒</button>
+      <button class="add-cart" id="addCartBtn">Agregar al carrito 🛒</button>
     </div>
   </div>
 </div>
 
-<footer>
+<footer style="text-align:center;padding:20px 0;">
   <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
 
 <script>
+/* Datos de perfumes (lista para la grid) */
 const perfumes = [
-  {name:"Mar Negro",description:"Oscuro, marino, misterioso.",image:"images/ADGPROFUMO.png"},
-  {name:"Neblina",description:"Fresco, salado, acuático.",image:"images/INV.png"},
-  {name:"Neblina Plateada",description:"Fresco, audaz, moderno.",image:"images/INVPLAT.png"},
-  {name:"Edén Tropical",description:"Exótico, tropical, vibrante.",image:"images/JEANGARD.png"},
-  {name:"Fortuna Dorada",description:"Dulce, audaz, opulento.",image:"images/LUCKY.png"},
-  {name:"Abismo Azul",description:"Acuático, fresco, profundo.",image:"images/PROFONDO.png"},
-  {name:"Sombra de Sándalo",description:"Leñoso, ahumado, robusto.",image:"images/SANTAL.png"},
-  {name:"Neblina V Elixir",description:"Intenso, picante, potente.",image:"images/VELIXIR.png"},
-  {name:"Océano Ígneo",description:"Elegante, fresco, audaz.",image:"images/BLEU.png"},
-  {name:"Legado",description:"Fresco, leñoso, complejo.",image:"images/CREED.png"},
+  {name:"Mar Negro",description:"Oscuro, marino, misterioso.",price:"$299.00",image:"images/ADGPROFUMO.png"},
+  {name:"Neblina",description:"Fresco, salado, acuático.",price:"$299.00",image:"images/INV.png"},
+  {name:"Neblina Plateada",description:"Fresco, audaz, moderno.",price:"$299.00",image:"images/INVPLAT.png"},
+  {name:"Edén Tropical",description:"Exótico, tropical, vibrante.",price:"$299.00",image:"images/JEANGARD.png"},
+  {name:"Fortuna Dorada",description:"Dulce, audaz, opulento.",price:"$299.00",image:"images/LUCKY.png"},
+  {name:"Abismo Azul",description:"Acuático, fresco, profundo.",price:"$299.00",image:"images/PROFONDO.png"},
+  {name:"Sombra de Sándalo",description:"Leñoso, ahumado, robusto.",price:"$299.00",image:"images/SANTAL.png"},
+  {name:"Neblina V Elixir",description:"Intenso, picante, potente.",price:"$299.00",image:"images/VELIXIR.png"},
+  {name:"Océano Ígneo",description:"Elegante, fresco, audaz.",price:"$299.00",image:"images/BLEU.png"},
+  {name:"Legado",description:"Fresco, leñoso, complejo.",price:"$299.00",image:"images/CREED.png"},
 ];
 
+const PRICE_120 = 299.00; // precio unitario 120 ml
+const PRICE_60  = 199.00; // precio unitario 60 ml
+
+/* Helper formato de precio */
+function formatPrice(num){
+  // simple formato $299.00
+  return '$' + Number(num).toFixed(2);
+}
+
+/* Render de la grilla */
 const perfumesContainer = document.getElementById("perfumesContainer");
 perfumes.forEach((p)=> {
   const div = document.createElement("div");
@@ -180,57 +228,88 @@ perfumes.forEach((p)=> {
     <img src="${p.image}" alt="${p.name}">
     <h3>${p.name}</h3>
     <p>${p.description}</p>
-    <p class="price">$299.00</p>`;
+    <p class="price">${p.price}</p>`;
   div.addEventListener("click", ()=>openModal(p));
   perfumesContainer.appendChild(div);
 });
 
+/* Modal elements */
 const modal = document.getElementById("productModal");
 const closeModal = document.getElementById("closeModal");
 const modalImage = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
 const modalDescription = document.getElementById("modalDescription");
 const modalPrice = document.getElementById("modalPrice");
-
 const quantityInput = document.getElementById("quantity");
 const decreaseBtn = document.getElementById("decreaseQty");
 const increaseBtn = document.getElementById("increaseQty");
-const ml60 = document.getElementById("ml60");
-const ml120 = document.getElementById("ml120");
+const addCartBtn = document.getElementById("addCartBtn");
+
+/* radios de presentación (delegado) */
+const mlRadios = document.querySelectorAll('input[name="ml"]');
+
+let currentProduct = null;
 
 function openModal(product){
+  currentProduct = product;
   modal.style.display="flex";
+  modal.setAttribute('aria-hidden','false');
   modalImage.src = product.image;
+  modalImage.alt = product.name;
   modalTitle.textContent = product.name;
   modalDescription.textContent = product.description;
-  ml120.checked = true; // por defecto 120ml
-  updatePrice();
+
+  // default presentation: 120ml
+  document.getElementById('ml120').checked = true;
   quantityInput.value = 1;
+  updatePrice(); // actualizar precio según radio seleccionado
 }
 
+/* cerrar modal */
+closeModal.addEventListener("click", ()=>{ modal.style.display="none"; modal.setAttribute('aria-hidden','true'); });
+window.addEventListener("click", e=>{ if(e.target===modal) { modal.style.display="none"; modal.setAttribute('aria-hidden','true'); } });
+
+/* actualizar precio cuando cambian las presentaciones */
+mlRadios.forEach(radio => radio.addEventListener('change', updatePrice));
 function updatePrice(){
-  if(ml60.checked){
-    modalPrice.textContent = "$199.00";
+  const sel = document.querySelector('input[name="ml"]:checked');
+  if(!sel) return;
+  if(sel.value === '60'){
+    modalPrice.textContent = formatPrice(PRICE_60);
   } else {
-    modalPrice.textContent = "$299.00";
+    modalPrice.textContent = formatPrice(PRICE_120);
   }
 }
 
-ml60.addEventListener("change", updatePrice);
-ml120.addEventListener("change", updatePrice);
-
-decreaseBtn.addEventListener("click", ()=>{
-  let qty = parseInt(quantityInput.value);
-  if(qty > 1) quantityInput.value = qty - 1;
+/* cantidad +/- */
+decreaseBtn.addEventListener('click', ()=>{
+  let v = parseInt(quantityInput.value) || 1;
+  if(v > 1) quantityInput.value = v - 1;
 });
-increaseBtn.addEventListener("click", ()=>{
-  let qty = parseInt(quantityInput.value);
-  quantityInput.value = qty + 1;
+increaseBtn.addEventListener('click', ()=>{
+  let v = parseInt(quantityInput.value) || 1;
+  quantityInput.value = v + 1;
+});
+quantityInput.addEventListener('input', ()=>{
+  let v = parseInt(quantityInput.value) || 1;
+  if(v < 1) quantityInput.value = 1;
 });
 
-closeModal.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none";});
+/* Agregar al carrito (demo: solo muestra en consola) */
+addCartBtn.addEventListener('click', ()=>{
+  const qty = parseInt(quantityInput.value) || 1;
+  const sel = document.querySelector('input[name="ml"]:checked');
+  const ml = sel ? sel.value : '120';
+  const unitPrice = (ml === '60') ? PRICE_60 : PRICE_120;
+  const total = unitPrice * qty;
+  // Aquí puedes integrar tu lógica de carrito; por ahora mostramos un mensaje:
+  console.log(`Agregar al carrito: ${currentProduct.name} — ${ml} ml — Cant: ${qty} — Unit: ${formatPrice(unitPrice)} — Total: ${formatPrice(total)}`);
+  alert(`Agregado: ${currentProduct.name}\nPresentación: ${ml} ml\nCantidad: ${qty}\nPrecio unitario: ${formatPrice(unitPrice)}\nTotal: ${formatPrice(total)}`);
+  // cerrar modal si quieres:
+  // modal.style.display='none';
+});
 
+/* header hide on scroll y nav active (conservar comportamiento) */
 const header = document.getElementById('mainHeader');
 let lastY=0;
 window.addEventListener('scroll', ()=>{
@@ -238,7 +317,6 @@ window.addEventListener('scroll', ()=>{
   if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
   lastY = y<=0?0:y;
 });
-
 const navLinks = document.querySelectorAll('nav a');
 const currentPage = window.location.pathname.split("/").pop();
 navLinks.forEach(link=>{
