--- a/perfumes.html
+++ b/perfumes.html
@@ -1,335 +1,185 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perfumes Elegantes</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: #f5f5f5;
-      color: #222;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Perfumes - EREBUS</title>
+<style>
+:root{
+  --color-primary:#000;
+  --color-background:#fff;
+  --color-accent:#e0e0e0;
+  --color-text:#333;
+  --color-gold:#c5a46d;
+  --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+*{box-sizing:border-box;margin:0;padding:0}
+body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
 
-    header {
-      background: #000;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      letter-spacing: 2px;
-    }
+/* HEADER */
+header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;transition:all .3s ease;}
+.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
+.logo-container img{height:50px;margin-right:10px}
+.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
+.header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
-    /* --- GRID DE PRODUCTOS --- */
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      padding: 30px;
-      max-width: 1200px;
-      margin: auto;
-    }
+/* NAV */
+nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
+nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
+nav a.active{color:var(--color-gold);border-bottom:2px solid var(--color-gold);}
 
-    .product {
-      background: #fff;
-      border-radius: 16px;
-      padding: 20px;
-      text-align: center;
-      cursor: pointer;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.08);
-      transition: transform 0.25s;
-    }
+/* MAIN PERFUMES */
+main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
+h1{margin-bottom:40px;margin-top:0}
 
-    .product:hover {
-      transform: translateY(-6px);
-    }
+/* Grid responsivo */
+.perfumes{display:grid;gap:20px;justify-items:center;grid-template-columns:repeat(2,1fr);}
+@media(min-width:1025px){.perfumes{grid-template-columns:repeat(5,1fr)}}
 
-    .product img {
-      width: 120px;
-      height: auto;
-      margin-bottom: 12px;
-    }
+.perfume{background:#fff;border:1px solid var(--color-accent);border-radius:0;padding:15px;text-align:center;transition:transform .3s,box-shadow .3s;width:100%;max-width:220px;cursor:pointer}
+.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
+.perfume img{width:100%;height:auto;border-radius:0}
+.perfume h3{margin:10px 0 5px;font-size:1.1rem}
+.perfume p{margin:5px 0;font-size:0.9rem;color:#666}
+.perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
-    .product h3 {
-      font-size: 1.1rem;
-      margin: 0;
-    }
+/* MODAL */
+.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;overflow:auto;padding:20px}
+.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
+@keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 
-    /* --- MODAL --- */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
+.modal-left, .modal-right{flex:1;position:relative}
+.modal-left img{width:100%;height:100%;object-fit:cover;display:block;}
+.modal-right{display:flex;flex-direction:column;justify-content:center;gap:15px;padding:30px;text-align:left}
+.modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px;}
+.modal-right p{margin-bottom:5px;font-size:1rem;color:#444;}
+.modal-right label{font-weight:600;display:block;margin:10px 0 5px;font-size:0.9rem}
+.modal-right select, .modal-right input{padding:10px;border:1px solid var(--color-accent);border-radius:6px;font-size:0.95rem;outline:none;transition:border .3s}
+.modal-right select:focus, .modal-right input:focus{border:1px solid var(--color-gold)}
 
-    .modal-content {
-      background: #fafafa;
-      border-radius: 20px;
-      display: flex;
-      max-width: 850px;
-      width: 100%;
-      overflow: hidden;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.2);
-      animation: fadeIn 0.3s ease;
-    }
+.add-cart{background:linear-gradient(135deg,var(--color-primary),#222);color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
+.add-cart:hover{background:linear-gradient(135deg,#222,var(--color-primary));transform:translateY(-2px)}
+.price{color:var(--color-gold);font-weight:bold;font-size:1.2rem}
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95);}
-      to { opacity: 1; transform: scale(1);}
-    }
+.close{position:absolute;top:10px;right:15px;font-size:32px;font-weight:bold;color:#fff;cursor:pointer;z-index:10;transition:all .3s}
+.close:hover{color:var(--color-gold);}
 
-    .modal-left {
-      flex: 1;
-      background: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 30px;
-    }
-
-    .modal-left img {
-      width: 250px;
-      height: auto;
-    }
-
-    .modal-right {
-      flex: 1.2;
-      padding: 30px;
-      background: linear-gradient(145deg, #ffffff, #f3f3f3);
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      position: relative;
-    }
-
-    .close {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      font-size: 1.8rem;
-      cursor: pointer;
-      color: #333;
-      transition: color 0.3s;
-    }
-
-    .close:hover { color: #000; }
-
-    .modal-right h2 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin: 0;
-      color: #111;
-    }
-
-    .modal-right p {
-      margin: 0;
-      font-size: 1rem;
-      color: #555;
-    }
-
-    .modal-price {
-      font-size: 1.8rem;
-      font-weight: bold;
-      color: #000;
-      font-family: 'Georgia', serif;
-      letter-spacing: 1px;
-      margin: 10px 0 20px;
-    }
-
-    /* --- BOTONES ML --- */
-    .ml-options {
-      display: flex;
-      gap: 15px;
-      margin-bottom: 10px;
-    }
-
-    .ml-btn {
-      padding: 12px 35px;
-      border-radius: 30px;
-      border: 2px solid #000;
-      background: #f9f9f9;
-      color: #222;
-      font-weight: 600;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.25s ease;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-    }
-
-    .ml-btn:hover {
-      background: #eee;
-      transform: translateY(-2px);
-    }
-
-    .ml-options input[type="radio"] {
-      display: none;
-    }
-
-    .ml-options input[type="radio"]:checked + label.ml-btn {
-      background: #000;
-      color: #fff;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-    }
-
-    /* --- CANTIDAD --- */
-    .quantity-control {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .quantity-control button {
-      background: #000;
-      color: #fff;
-      border: none;
-      width: 40px;
-      height: 40px;
-      font-size: 1.2rem;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s;
-    }
-
-    .quantity-control button:hover {
-      background: #333;
-      transform: scale(1.1);
-    }
-
-    .quantity-control input[type="number"] {
-      width: 70px;
-      text-align: center;
-      padding: 8px;
-      font-size: 1rem;
-      border: 2px solid #ddd;
-      border-radius: 10px;
-    }
-
-    /* --- BOTÓN PRINCIPAL --- */
-    .add-cart {
-      background: linear-gradient(135deg, #000, #333);
-      color: #fff;
-      padding: 15px;
-      border: none;
-      border-radius: 40px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      margin-top: 15px;
-    }
-
-    .add-cart:hover {
-      background: linear-gradient(135deg, #333, #000);
-      transform: translateY(-2px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-    }
-
-    @media (max-width: 768px) {
-      .modal-content {
-        flex-direction: column;
-        max-width: 95%;
-      }
-      .modal-left, .modal-right {
-        flex: 1;
-      }
-    }
-  </style>
+/* RESPONSIVE MODAL */
+@media(max-width:1024px){
+  .modal-content{flex-direction:column;width:95%;}
+  .modal-left img{height:280px;object-fit:cover;}
+  .modal-right{padding:20px;}
+}
+footer{text-align:center;padding:20px;font-size:0.9rem;background:#f9f9f9;margin-top:40px;color:#666;}
+</style>
 </head>
 <body>
-  <header>Perfumes Elegantes</header>
+<header id="mainHeader">
+  <div class="logo-container">
+    <img src="images/LOGOE.png" alt="Logo EREBUS">
+    <h1>EREBUS</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="index.html#ropa">Ropa</a></li>
+      <li><a href="perfumes.html">Perfumes</a></li>
+      <li><a href="index.html#contacto">Contacto</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <section class="products">
-    <div class="product" onclick="openModal('perfume1')">
-      <img src="https://via.placeholder.com/150" alt="Perfume 1">
-      <h3>Perfume 1</h3>
+<main>
+  <h1>Nuestros Perfumes</h1>
+  <div class="perfumes" id="perfumesContainer"></div>
+</main>
+
+<!-- MODAL -->
+<div class="modal" id="productModal">
+  <div class="modal-content">
+    <span class="close" id="closeModal">&times;</span>
+    <div class="modal-left">
+      <img id="modalImage" src="" alt="Producto">
     </div>
-    <div class="product" onclick="openModal('perfume2')">
-      <img src="https://via.placeholder.com/150" alt="Perfume 2">
-      <h3>Perfume 2</h3>
-    </div>
-  </section>
-
-  <!-- MODAL -->
-  <div id="productModal" class="modal">
-    <div class="modal-content">
-      <div class="modal-left">
-        <img id="modalImg" src="" alt="Perfume">
-      </div>
-      <div class="modal-right">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <h2 id="modalTitle">Título del Perfume</h2>
-        <p id="modalDesc">Descripción elegante del perfume seleccionado.</p>
-        <div class="modal-price" id="modalPrice">$0.00</div>
-
-        <div class="ml-options">
-          <input type="radio" name="ml" id="ml60" checked>
-          <label for="ml60" class="ml-btn">60 ml</label>
-
-          <input type="radio" name="ml" id="ml120">
-          <label for="ml120" class="ml-btn">120 ml</label>
-        </div>
-
-        <div class="quantity-control">
-          <button onclick="changeQty(-1)">-</button>
-          <input type="number" id="quantity" value="1" min="1">
-          <button onclick="changeQty(1)">+</button>
-        </div>
-
-        <button class="add-cart">Agregar al carrito</button>
-      </div>
+    <div class="modal-right">
+      <h2 id="modalTitle"></h2>
+      <p id="modalDescription"></p>
+      <p id="modalPrice" class="price"></p>
+      <label for="ml">Presentación:</label>
+      <select id="ml">
+        <option value="60ml">60 ml</option>
+        <option value="120ml">120 ml</option>
+      </select>
+      <label for="quantity">Cantidad:</label>
+      <input type="number" id="quantity" min="1" value="1">
+      <button class="add-cart">Agregar al carrito 🛒</button>
     </div>
   </div>
+</div>
 
-  <script>
-    const perfumes = {
-      perfume1: {
-        title: "Perfume 1",
-        desc: "Un aroma fresco y elegante para toda ocasión.",
-        price: "$1200.00",
-        img: "https://via.placeholder.com/250"
-      },
-      perfume2: {
-        title: "Perfume 2",
-        desc: "Fragancia intensa y sofisticada para la noche.",
-        price: "$1500.00",
-        img: "https://via.placeholder.com/250"
-      }
-    };
+<footer>
+  <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
+</footer>
 
-    function openModal(perfumeId) {
-      const modal = document.getElementById("productModal");
-      const data = perfumes[perfumeId];
-      document.getElementById("modalTitle").innerText = data.title;
-      document.getElementById("modalDesc").innerText = data.desc;
-      document.getElementById("modalPrice").innerText = data.price;
-      document.getElementById("modalImg").src = data.img;
-      modal.style.display = "flex";
-    }
+<script>
+const perfumes = [
+  {name:"Mar Negro",description:"Oscuro, marino, misterioso.",price:"$299.00",image:"images/ADGPROFUMO.png"},
+  {name:"Neblina",description:"Fresco, salado, acuático.",price:"$299.00",image:"images/INV.png"},
+  {name:"Neblina Plateada",description:"Fresco, audaz, moderno.",price:"$299.00",image:"images/INVPLAT.png"},
+  {name:"Edén Tropical",description:"Exótico, tropical, vibrante.",price:"$299.00",image:"images/JEANGARD.png"},
+  {name:"Fortuna Dorada",description:"Dulce, audaz, opulento.",price:"$299.00",image:"images/LUCKY.png"},
+  {name:"Abismo Azul",description:"Acuático, fresco, profundo.",price:"$299.00",image:"images/PROFONDO.png"},
+  {name:"Sombra de Sándalo",description:"Leñoso, ahumado, robusto.",price:"$299.00",image:"images/SANTAL.png"},
+  {name:"Neblina V Elixir",description:"Intenso, picante, potente.",price:"$299.00",image:"images/VELIXIR.png"},
+  {name:"Océano Ígneo",description:"Elegante, fresco, audaz.",price:"$299.00",image:"images/BLEU.png"},
+  {name:"Legado",description:"Fresco, leñoso, complejo.",price:"$299.00",image:"images/CREED.png"},
+];
 
-    function closeModal() {
-      document.getElementById("productModal").style.display = "none";
-    }
+const perfumesContainer = document.getElementById("perfumesContainer");
+perfumes.forEach((p)=> {
+  const div = document.createElement("div");
+  div.className="perfume";
+  div.innerHTML = `
+    <img src="${p.image}" alt="${p.name}">
+    <h3>${p.name}</h3>
+    <p>${p.description}</p>
+    <p class="price">${p.price}</p>`;
+  div.addEventListener("click", ()=>openModal(p));
+  perfumesContainer.appendChild(div);
+});
 
-    function changeQty(val) {
-      let qty = document.getElementById("quantity");
-      let newVal = parseInt(qty.value) + val;
-      if (newVal >= 1) qty.value = newVal;
-    }
+const modal = document.getElementById("productModal");
+const closeModal = document.getElementById("closeModal");
+const modalImage = document.getElementById("modalImage");
+const modalTitle = document.getElementById("modalTitle");
+const modalDescription = document.getElementById("modalDescription");
+const modalPrice = document.getElementById("modalPrice");
 
-    window.onclick = function(e) {
-      const modal = document.getElementById("productModal");
-      if (e.target === modal) modal.style.display = "none";
-    }
-  </script>
+function openModal(product){
+  modal.style.display="flex";
+  modalImage.src = product.image;
+  modalTitle.textContent = product.name;
+  modalDescription.textContent = product.description;
+  modalPrice.textContent = product.price;
+}
+
+closeModal.addEventListener("click", ()=>modal.style.display="none");
+window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none";});
+
+const header = document.getElementById('mainHeader');
+let lastY=0;
+window.addEventListener('scroll', ()=>{
+  const y = window.pageYOffset || document.documentElement.scrollTop;
+  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
+  lastY = y<=0?0:y;
+});
+
+const navLinks = document.querySelectorAll('nav a');
+const currentPage = window.location.pathname.split("/").pop();
+navLinks.forEach(link=>{
+  const linkPage = link.getAttribute('href').split("/").pop();
+  if(linkPage===currentPage) link.classList.add('active');
+});
+</script>
 </body>
 </html>
