--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
       <p class="price" id="modalPrice">$220.00</p>
       <label>Talla:</label>
       <div class="ml-options">
-        <div class="ml-option active" data-price="220">$220 - Mediana</div>
+        <div class="ml-option active" data-price="220">Mediana</div>
         <div class="ml-option" data-price="220">Grande</div>
         <div class="ml-option" data-price="220">Extra Grande</div>
       </div>
@@ -189,10 +189,10 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 <script>
 // Productos ropa
 const ropaProducts = [
-   {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
-   {id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA2.png",keywords:"playera negra oversize"},
-   {id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA3.png",keywords:"playera negra oversize"},
-   {id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA4.png",keywords:"playera negra oversize"},
+   {id:1,name:"Playera Oversize Negra 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
 
 // Renderizar productos
