--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
       <p class="price" id="modalPrice">$220.00</p>
       <label>Talla:</label>
       <div class="ml-options">
-        <div class="ml-option active" data-price="220">$220 - Mediana</div>
+        <div class="ml-option active" data-price="220">Mediana</div>
         <div class="ml-option" data-price="220">Grande</div>
         <div class="ml-option" data-price="220">Extra Grande</div>
       </div>
